--- a/exercise_1/index.html
+++ b/exercise_1/index.html
@@ -13,10 +13,11 @@
             border: 2px solid grey;
             border-radius: 15px;
             aspect-ratio: 4/3;
-            width: 10rem;
-            text-align: center;
+            width: 6em;
+            display: inline-flex;
+            justify-content: center;
+            align-items: center;
             margin: 2px 2px;
-            
         }
         .emoji {
             font-size: 2em;
