adjust grid layout

--- a/exercise_2/index.html
+++ b/exercise_2/index.html
@@ -9,9 +9,10 @@
 </head>
 <body>
     <div class="container">
-        <h1>Bé Tập Tính</h1>
-        <br>
     <div class="grid-container">
+        <div class="grid-item" id="app-title">
+            <h1>Bé Tập Tính</h1>
+        </div>
         <div class="grid-item">
             <label for="firstNumber">Số thứ nhất</label>
         </div>
