--- a/bt2/public/index.html
+++ b/bt2/public/index.html
@@ -5,40 +5,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <script src="./index.js"></script>
+
 </head>
 <body>
 <div class="container">
-    <div class="d-flex flex-row justify-content-center align-items-center">
-        <form class="card mt-5" id="calculation-form" style="width: 18rem;" action="/calculation" method="post">
+    <div class="mt-5 d-flex flex-column justify-content-center align-items-center">
+        <div class="card" id="calculation-form" style="width: 25rem;">
             <ul class="list-group list-group-flush">
                 <li class="list-group-item">Calculator</li>
-
+                <div class="alert alert-danger m-2 d-none" role="alert" id="feedback">
+                    A simple danger alert—check it out!
+                  </div>
                 <li class="list-group-item d-flex flex-column align-items-end">
 
                     <div class="input-group mb-3">
                         <span class="input-group-text bg-muted" id="basic-addon1">X</span>
-                        <input type="text" name="x" required class="form-control" placeholder="..." aria-label="Username" aria-describedby="basic-addon1">
+                        <input value="5" type="text" name="x" id='x' required class="form-control" placeholder="..." aria-label="Username" aria-describedby="basic-addon1">
                     </div>
 
                     <div class="input-group mb-3">
                         <span class="input-group-text" id="basic-addon1">Y</span>
-                        <input type="text" name="y" required class="form-control" placeholder="..." aria-label="Username" aria-describedby="basic-addon1">
+                        <input value="10" type="text" name="y" id='y' required class="form-control" placeholder="..." aria-label="Username" aria-describedby="basic-addon1">
                     </div>
 
                     <div class="input-group mb-3">
 
-                        <select name="operator" id="operator" class="custom-select w-100 p-2 rounded border">
-                            <option selected value="+">
-                                Plus
+                        <select name="operator" id="operator" class="custom-select w-100 p-2 rounded border text-center">
+                            <option selected value="plus">
+                                +
                             </option>
-                            <option value="-">
-                                Minus
+                            <option value="minus">
+                                -
                             </option>
-                            <option value="*">
-                                Multiply
+                            <option value="multiply">
+                                *
                             </option>
-                            <option value="/">
-                                Divide
+                            <option value="divide">
+                                /
                             </option>
                         </select>
                     </div>
@@ -47,16 +52,12 @@
                         Calculate
                     </button>
 
-                    <h2 class="border rounded-pill p-3 bg-info text-white"> Result</h2>
+                    <h2 id="result" class="border rounded-pill p-3 bg-info text-white"> Result</h2>
 
                 </li>
             </ul>
-        </form>
+        </div>
     </div>
 </div>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-
-<script src="../index.js"></script>
 </body>
 </html>
