--- a/bt2/public/index.html
+++ b/bt2/public/index.html
@@ -21,13 +21,13 @@
                 <li class="list-group-item d-flex flex-column align-items-end">
 
                     <div class="input-group mb-3">
-                        <span class="input-group-text bg-muted" id="basic-addon1">X</span>
-                        <input value="5" type="text" name="x" id='x' required class="form-control" placeholder="..." aria-label="Username" aria-describedby="basic-addon1">
+                        <span class="input-group-text bg-secondary-subtle" id="basic-addon1">X</span>
+                        <input  type="text" name="x" id='x' required class="form-control" placeholder="..." aria-label="Username" aria-describedby="basic-addon1">
                     </div>
 
                     <div class="input-group mb-3">
-                        <span class="input-group-text" id="basic-addon1">Y</span>
-                        <input value="10" type="text" name="y" id='y' required class="form-control" placeholder="..." aria-label="Username" aria-describedby="basic-addon1">
+                        <span class="input-group-text bg-secondary-subtle" id="basic-addon1">Y</span>
+                        <input type="text" name="y" id='y' required class="form-control" placeholder="..." aria-label="Username" aria-describedby="basic-addon1">
                     </div>
 
                     <div class="input-group mb-3">
